# star32

./: .gitignore  CMakeLists.txt  README.md
.github/: SECURITY.md  SUPPORT.md
.github/workflows/: build.yml
examples/: CMakeLists.txt
include/star32/: star_audio.h  star_debug.h  star_game.h  star_input.h  star_math.h  star_physics.h  star_render.h  star_script.h  star_types.h  star_world.h
src/: star_audio.c  star_debug.c  star_game.c  star_input.c  star_render.c
tools/: CMakeLists.txt
